# fun_with_c

./: .clang-format  33_threads.cpp  CMakeLists.txt  README.md  arr.cpp  boost_stacktrace.cpp  common.h  domino.c  fallen_seq.c  funny_str.c  install-range-v3.sh  learn_sscanf.c  opencv_draw.cpp  opencv_ops.cpp  pointer_demo.c  range.cpp  scratch.cpp  stavebnice_merkur.c  submatrix.cpp  submatrix2.cpp  time_strings.c  tuple.cpp  type_size.cpp  vypis_binar.c
py_2_cpp_ctypes/: Makefile  line.c  line.h  point.c  point.h  pyline.py
src/: memcheck.c
